--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,11 +37,12 @@ dependencies:
   firebase_core: ^2.14.0
   firebase_auth: ^4.6.3
   google_sign_in: ^6.1.4
-  flutter_bloc: ^8.1.3
   rxdart: ^0.27.7
   meta: ^1.8.0
   font_awesome_flutter: ^10.4.0
   get: ^4.6.5
+  get_storage: ^2.1.1
+  flutter_facebook_auth: ^5.0.11
 
 dev_dependencies:
   flutter_test:
@@ -63,6 +64,10 @@ flutter:
     - assets/icons/google.png
     - assets/icons/apple.png
     - assets/icons/facebook.png
+    - assets/icons/edit.png
+
+    - assets/images/baby.jpg
+    - assets/images/unknownUser.png
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
